2009-03-24  Matthias Clasen  <mclasen@redhat.com>

	Bug 576306 – gdkscreen.c: get_nearest_monitor too simple, gives wrong
	result, mispositioning tooltips

	* gdk/gdkscreen.c (get_nearest_monitor): Make this function work.
	Problem reported by Dave Gilbert.

2009-03-23  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	Bug 576254 - <object> requires attribute "id"

	* docs/reference/gtk/tmpl/gtkdialog.sgml: Add id attribute to 
	GtkBuilder UI sample.

2009-03-21  Cody Russell  <bratsche@gnome.org>

	Bug 538840 – [Win32] GTK menu theming could be improved

	* modules/engines/ms-windows/xp_theme.c
	* modules/engines/ms-windows/msw_style.c: Use newer
	menu styling API.  This makes gtk+ look much better on
	Windows Vista.

2009-03-19  Claudio Saavedra  <csaavedra@igalia.com>

	Bug 574283 – unused assignment and dead code in
	gtk_widget_set_tooltip_window()

	* gtk/gtkwidget.c: (gtk_widget_set_tooltip_window): Remove
	an unused assignment and clean up, improving checks.

2009-03-18  Michael Natterer  <mitch@gimp.org>

	* gtk/gtkscalebutton.c: add static function
	gtk_scale_button_set_orientation_private() and use it instead of
	the public but deprecated gtk_scale_button_set_orientation().

2009-03-17  Tor Lillqvist  <tml@novell.com>

	Bug 575700 - Crash when moving a GtkWindow

	* gdk/win32/gdkevents-win32.c (gdk_event_translate): Fix
	embarrassing crasher bug introduced on 2009-03-11. A variable was
	assigned a value only inside a GDK_NOTE but still used outside
	that.

2009-03-17  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkprintoperation-win32.c: Newer mingw-w64 uses an
	underscore-prefixed identification macro.

2009-03-13  Matthias Clasen  <mclasen@redhat.com>

	* README.in: Late release notes for 2.16

2009-03-13  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-03-13  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.0 ===

2009-03-13  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

	* configure.in: Bump version to 2.16.0
